<resources>
    <string name="app_name">FreeMinds</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_notification">Notification</string>
    <string name="image_extra">image extra</string>
    <string name="post_image">post image</string>
    <string name="enter_a_username">Enter a Username</string>
    <string name="enter_phone_number">Enter your phone number (optional)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">where do you stay?</string>
    <string name="complete">Save and Continue</string>
</resources>
