<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".CompleteProfileActivity">

    <ImageButton
        android:id="@+id/userImg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars[10]"
        android:src="@drawable/ic_person_black_24dp"/>

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_outline"
        android:padding="10dp"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/enter_a_username" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_gravity="center"
        android:ems="10"
        android:padding="10dp"
        android:background="@drawable/edittext_outline"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/edittext_outline"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <RadioGroup
        android:id="@+id/radioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <RadioButton
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

  <Button
      android:id="@+id/btnComplete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@drawable/button_outline"
      android:padding="10dp"
      android:textColor="@android:color/white"
      android:layout_marginTop="15dp"
      android:text="@string/complete"/>

</LinearLayout>